// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderers HTML verb conjugation render 1`] = `
"<figure>
   <figcaption>Verb conjugation</figcaption>
   <table>
      <thead>
         <tr>
            <th>person</th>
            <th>pronoun</th>
            <th>present</th>
            <th>imperfect</th>
            <th>future</th>
         </tr>
      </thead>
      <tbody>
         <tr>
            <th>1.sg</th>
            <td>ja</td>
            <td>dověm sę</td>
            <td>dověděh sę</td>
            <td>bųdų dověděti sę</td>
         </tr>
         <tr>
            <th>2.sg</th>
            <td>ty</td>
            <td>dověš sę</td>
            <td>dověděše sę</td>
            <td>bųdeš dověděti sę</td>
         </tr>
         <tr>
            <th>3.sg</th>
            <td>on, ona, ono</td>
            <td>dově sę</td>
            <td>dověděše sę</td>
            <td>bųde dověděti sę</td>
         </tr>
         <tr>
            <th>1.pl</th>
            <td>my</td>
            <td>dověmo sę</td>
            <td>dověděhmo sę</td>
            <td>bųdemo dověděti sę</td>
         </tr>
         <tr>
            <th>2.pl</th>
            <td>vy</td>
            <td>dověte sę</td>
            <td>dověděste sę</td>
            <td>bųdete dověděti sę</td>
         </tr>
         <tr>
            <th>3.pl</th>
            <td>oni, one</td>
            <td>dovědųt sę</td>
            <td>dověděhų sę</td>
            <td>bųdųt dověděti sę</td>
         </tr>
      </tbody>
      </table>
      <table>
      <thead>
         <tr>
            <th>person</th>
            <th>pronoun</th>
            <th>perfect</th>
            <th>pluperfect</th>
            <th>conditional</th>
         </tr>
         <tr>
            <th>1.sg</th>
            <td>ja</td>
            <td>jesm dověděl(a) sę</td>
            <td>běh dověděl(a) sę</td>
            <td>byh dověděl(a) sę</td>
         </tr>
         <tr>
            <th>2.sg</th>
            <td>ty</td>
            <td>jesi dověděl(a) sę</td>
            <td>běše dověděl(a) sę</td>
            <td>bys dověděl(a) sę</td>
         </tr>
         <tr>
            <th rowspan="3">3.sg</th>
            <td>on</td>
            <td>(je) dověděl sę</td>
            <td>běše dověděl sę</td>
            <td>by dověděl sę</td>
         </tr>
         <tr>
            <td>ona</td>
            <td>(je) dověděla sę</td>
            <td>běše dověděla sę</td>
            <td>by dověděla sę</td>
         </tr>
         <tr>
            <td>ono</td>
            <td>(je) dovědělo sę</td>
            <td>běše dovědělo sę</td>
            <td>by dovědělo sę</td>
         </tr>
         <tr>
            <th>1.pl</th>
            <td>my</td>
            <td>jesmo dověděli sę</td>
            <td>běhmo dověděli sę</td>
            <td>byhmo dověděli sę</td>
         </tr>
         <tr>
            <th>2.pl</th>
            <td>vy</td>
            <td>jeste dověděli sę</td>
            <td>běste dověděli sę</td>
            <td>byste dověděli sę</td>
         </tr>
         <tr>
            <th>3.pl</th>
            <td>oni, one</td>
            <td>(sųt) dověděli sę</td>
            <td>běhų dověděli sę</td>
            <td>by dověděli sę</td>
         </tr>
       </thead>
       </table>
       <table>
       <tbody>
         <tr>
            <th align="left" colspan="2">infinitive</th>
            <td colspan="3">dověděti sę</td>
         </tr>
         <tr>
            <th align="left" colspan="2">imperative</th>
            <td colspan="3">dověd́ sę, dověd́mo sę, dověd́te sę</td>
         </tr>
         <tr>
            <th align="left" colspan="2">present active participle</th>
            <td colspan="3">dovědųći (dovědųća, dovědųće) sę</td>
         </tr>
         <tr>
            <th align="left" colspan="2">present passive participle</th>
            <td colspan="3">dovědomy (dovědoma, dovědomo)</td>
         </tr>
         <tr>
            <th align="left" colspan="2">past active participle</th>
            <td colspan="3">dověděvši (dověděvša, dověděvše) sę</td>
         </tr>
         <tr>
            <th align="left" colspan="2">past passive participle</th>
            <td colspan="3">dověděny (dověděna, dověděno)</td>
         </tr>
         <tr>
            <th align="left" colspan="2">verbal noun</th>
            <td colspan="3">dověděńje</td>
         </tr>
      </tbody>
   </table>
</figure>
"
`;

exports[`renderers HTML verb conjugation renderDiff 1`] = `
"<figure>
   <figcaption>Verb conjugation</figcaption>
   <table>
      <thead>
         <tr>
            <th>person</th>
            <th>pronoun</th>
            <th>present</th>
            <th>imperfect</th>
            <th>future</th>
         </tr>
      </thead>
      <tbody>
         <tr>
            <th>1.sg</th>
            <td>ja</td>
            <td><del>dověm sę</del> <ins>pověm</ins></td>
            <td><del>dověděh sę</del> <ins>pověděh</ins></td>
            <td><del>bųdų dověděti sę</del> <ins>bųdų pověděti</ins></td>
         </tr>
         <tr>
            <th>2.sg</th>
            <td>ty</td>
            <td><del>dověš sę</del> <ins>pověš</ins></td>
            <td><del>dověděše sę</del> <ins>pověděše</ins></td>
            <td><del>bųdeš dověděti sę</del> <ins>bųdeš pověděti</ins></td>
         </tr>
         <tr>
            <th>3.sg</th>
            <td>on, ona, ono</td>
            <td><del>dově sę</del> <ins>pově</ins></td>
            <td><del>dověděše sę</del> <ins>pověděše</ins></td>
            <td><del>bųde dověděti sę</del> <ins>bųde pověděti</ins></td>
         </tr>
         <tr>
            <th>1.pl</th>
            <td>my</td>
            <td><del>dověmo sę</del> <ins>pověmo</ins></td>
            <td><del>dověděhmo sę</del> <ins>pověděhmo</ins></td>
            <td><del>bųdemo dověděti sę</del> <ins>bųdemo pověděti</ins></td>
         </tr>
         <tr>
            <th>2.pl</th>
            <td>vy</td>
            <td><del>dověte sę</del> <ins>pověte</ins></td>
            <td><del>dověděste sę</del> <ins>pověděste</ins></td>
            <td><del>bųdete dověděti sę</del> <ins>bųdete pověděti</ins></td>
         </tr>
         <tr>
            <th>3.pl</th>
            <td>oni, one</td>
            <td><del>dovědųt sę</del> <ins>povědųt</ins></td>
            <td><del>dověděhų sę</del> <ins>pověděhų</ins></td>
            <td><del>bųdųt dověděti sę</del> <ins>bųdųt pověděti</ins></td>
         </tr>
      </tbody>
      </table>
      <table>
      <thead>
         <tr>
            <th>person</th>
            <th>pronoun</th>
            <th>perfect</th>
            <th>pluperfect</th>
            <th>conditional</th>
         </tr>
         <tr>
            <th>1.sg</th>
            <td>ja</td>
            <td><del>jesm dověděl(a) sę</del> <ins>jesm pověděl(a)</ins></td>
            <td><del>běh dověděl(a) sę</del> <ins>běh pověděl(a)</ins></td>
            <td><del>byh dověděl(a) sę</del> <ins>byh pověděl(a)</ins></td>
         </tr>
         <tr>
            <th>2.sg</th>
            <td>ty</td>
            <td><del>jesi dověděl(a) sę</del> <ins>jesi pověděl(a)</ins></td>
            <td><del>běše dověděl(a) sę</del> <ins>běše pověděl(a)</ins></td>
            <td><del>bys dověděl(a) sę</del> <ins>bys pověděl(a)</ins></td>
         </tr>
         <tr>
            <th rowspan="3">3.sg</th>
            <td>on</td>
            <td><del>(je) dověděl sę</del> <ins>(je) pověděl</ins></td>
            <td><del>běše dověděl sę</del> <ins>běše pověděl</ins></td>
            <td><del>by dověděl sę</del> <ins>by pověděl</ins></td>
         </tr>
         <tr>
            <td>ona</td>
            <td><del>(je) dověděla sę</del> <ins>(je) pověděla</ins></td>
            <td><del>běše dověděla sę</del> <ins>běše pověděla</ins></td>
            <td><del>by dověděla sę</del> <ins>by pověděla</ins></td>
         </tr>
         <tr>
            <td>ono</td>
            <td><del>(je) dovědělo sę</del> <ins>(je) povědělo</ins></td>
            <td><del>běše dovědělo sę</del> <ins>běše povědělo</ins></td>
            <td><del>by dovědělo sę</del> <ins>by povědělo</ins></td>
         </tr>
         <tr>
            <th>1.pl</th>
            <td>my</td>
            <td><del>jesmo dověděli sę</del> <ins>jesmo pověděli</ins></td>
            <td><del>běhmo dověděli sę</del> <ins>běhmo pověděli</ins></td>
            <td><del>byhmo dověděli sę</del> <ins>byhmo pověděli</ins></td>
         </tr>
         <tr>
            <th>2.pl</th>
            <td>vy</td>
            <td><del>jeste dověděli sę</del> <ins>jeste pověděli</ins></td>
            <td><del>běste dověděli sę</del> <ins>běste pověděli</ins></td>
            <td><del>byste dověděli sę</del> <ins>byste pověděli</ins></td>
         </tr>
         <tr>
            <th>3.pl</th>
            <td>oni, one</td>
            <td><del>(sųt) dověděli sę</del> <ins>(sųt) pověděli</ins></td>
            <td><del>běhų dověděli sę</del> <ins>běhų pověděli</ins></td>
            <td><del>by dověděli sę</del> <ins>by pověděli</ins></td>
         </tr>
       </thead>
       </table>
       <table>
       <tbody>
         <tr>
            <th align="left" colspan="2">infinitive</th>
            <td colspan="3"><del>dověděti sę</del> <ins>pověděti</ins></td>
         </tr>
         <tr>
            <th align="left" colspan="2">imperative</th>
            <td colspan="3"><del>dověd́ sę, dověd́mo sę, dověd́te sę</del> <ins>pověd́, pověd́mo, pověd́te</ins></td>
         </tr>
         <tr>
            <th align="left" colspan="2">present active participle</th>
            <td colspan="3"><del>dovědųći (dovědųća, dovědųće) sę</del> <ins>povědųći (povědųća, povědųće)</ins></td>
         </tr>
         <tr>
            <th align="left" colspan="2">present passive participle</th>
            <td colspan="3"><del>dovědomy (dovědoma, dovědomo)</del> <ins>povědomy (povědoma, povědomo)</ins></td>
         </tr>
         <tr>
            <th align="left" colspan="2">past active participle</th>
            <td colspan="3"><del>dověděvši (dověděvša, dověděvše) sę</del> <ins>pověděvši (pověděvša, pověděvše)</ins></td>
         </tr>
         <tr>
            <th align="left" colspan="2">past passive participle</th>
            <td colspan="3"><del>dověděny (dověděna, dověděno)</del> <ins>pověděny (pověděna, pověděno)</ins></td>
         </tr>
         <tr>
            <th align="left" colspan="2">verbal noun</th>
            <td colspan="3"><del>dověděńje</del> <ins>pověděńje</ins></td>
         </tr>
      </tbody>
   </table>
</figure>
"
`;
